# ManuScript

./: .gitignore  CMakeLists.txt  ManuScript.sln  README.md
ManuScript/: ManuScript.vcxproj  ManuScript.vcxproj.filters  functions.c  functions.h  lexer.c  lexer.h  main.c  main.h  parser.c  parser.h  variables.c  variables.h
manuscript/: CMakeLists.txt  functions.h  lexer.h
manuscript1/: manuscript.c  manuscript.h  variables.c
